apollo-federation/src/connectors/expand/tests/snapshots/connectors@types_used_twice.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/types_used_twice.graphql
---
{
    "connectors_Query_ts_0": Connector {
        id: ConnectId {
            subgraph_name: "connectors",
            source_name: Some(
                "example",
            ),
            named: None,
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.ts),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: Some(
            HttpJsonTransport {
                source_template: Some(
                    StringTemplate {
                        parts: [
                            Constant(
                                Constant {
                                    value: "http://example",
                                    location: 0..14,
                                },
                            ),
                        ],
                    },
                ),
                connect_template: StringTemplate {
                    parts: [
                        Constant(
                            Constant {
                                value: "/",
                                location: 0..1,
                            },
                        ),
                    ],
                },
                method: Get,
                headers: [],
                body: None,
                source_path: None,
                source_query_params: None,
                connect_path: None,
                connect_query_params: None,
            },
        ),
        selection: JSONSelection {
            inner: Named(
                SubSelection {
                    selections: [
                        NamedSelection {
                            prefix: None,
                            path: WithRange {
                                node: Path(
                                    PathSelection {
                                        path: WithRange {
                                            node: Key(
                                                WithRange {
                                                    node: Field(
                                                        "a",
                                                    ),
                                                    range: Some(
                                                        0..1,
                                                    ),
                                                },
                                                WithRange {
                                                    node: Selection(
                                                        SubSelection {
                                                            selections: [
                                                                NamedSelection {
                                                                    prefix: None,
                                                                    path: WithRange {
                                                                        node: Path(
                                                                            PathSelection {
                                                                                path: WithRange {
                                                                                    node: Key(
                                                                                        WithRange {
                                                                                            node: Field(
                                                                                                "id",
                                                                                            ),
                                                                                            range: Some(
                                                                                                4..6,
                                                                                            ),
                                                                                        },
                                                                                        WithRange {
                                                                                            node: Empty,
                                                                                            range: Some(
                                                                                                6..6,
                                                                                            ),
                                                                                        },
                                                                                    ),
                                                                                    range: Some(
                                                                                        4..6,
                                                                                    ),
                                                                                },
                                                                            },
                                                                        ),
                                                                        range: Some(
                                                                            4..6,
                                                                        ),
                                                                    },
                                                                },
                                                            ],
                                                            range: Some(
                                                                2..8,
                                                            ),
                                                        },
                                                    ),
                                                    range: Some(
                                                        2..8,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                0..8,
                                            ),
                                        },
                                    },
                                ),
                                range: Some(
                                    0..8,
                                ),
                            },
                        },
                        NamedSelection {
                            prefix: None,
                            path: WithRange {
                                node: Path(
                                    PathSelection {
                                        path: WithRange {
                                            node: Key(
                                                WithRange {
                                                    node: Field(
                                                        "b",
                                                    ),
                                                    range: Some(
                                                        9..10,
                                                    ),
                                                },
                                                WithRange {
                                                    node: Selection(
                                                        SubSelection {
                                                            selections: [
                                                                NamedSelection {
                                                                    prefix: None,
                                                                    path: WithRange {
                                                                        node: Path(
                                                                            PathSelection {
                                                                                path: WithRange {
                                                                                    node: Key(
                                                                                        WithRange {
                                                                                            node: Field(
                                                                                                "a",
                                                                                            ),
                                                                                            range: Some(
                                                                                                13..14,
                                                                                            ),
                                                                                        },
                                                                                        WithRange {
                                                                                            node: Selection(
                                                                                                SubSelection {
                                                                                                    selections: [
                                                                                                        NamedSelection {
                                                                                                            prefix: None,
                                                                                                            path: WithRange {
                                                                                                                node: Path(
                                                                                                                    PathSelection {
                                                                                                                        path: WithRange {
                                                                                                                            node: Key(
                                                                                                                                WithRange {
                                                                                                                                    node: Field(
                                                                                                                                        "id",
                                                                                                                                    ),
                                                                                                                                    range: Some(
                                                                                                                                        17..19,
                                                                                                                                    ),
                                                                                                                                },
                                                                                                                                WithRange {
                                                                                                                                    node: Empty,
                                                                                                                                    range: Some(
                                                                                                                                        19..19,
                                                                                                                                    ),
                                                                                                                                },
                                                                                                                            ),
                                                                                                                            range: Some(
                                                                                                                                17..19,
                                                                                                                            ),
                                                                                                                        },
                                                                                                                    },
                                                                                                                ),
                                                                                                                range: Some(
                                                                                                                    17..19,
                                                                                                                ),
                                                                                                            },
                                                                                                        },
                                                                                                    ],
                                                                                                    range: Some(
                                                                                                        15..21,
                                                                                                    ),
                                                                                                },
                                                                                            ),
                                                                                            range: Some(
                                                                                                15..21,
                                                                                            ),
                                                                                        },
                                                                                    ),
                                                                                    range: Some(
                                                                                        13..21,
                                                                                    ),
                                                                                },
                                                                            },
                                                                        ),
                                                                        range: Some(
                                                                            13..21,
                                                                        ),
                                                                    },
                                                                },
                                                            ],
                                                            range: Some(
                                                                11..23,
                                                            ),
                                                        },
                                                    ),
                                                    range: Some(
                                                        11..23,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                9..23,
                                            ),
                                        },
                                    },
                                ),
                                range: Some(
                                    9..23,
                                ),
                            },
                        },
                    ],
                    range: Some(
                        0..23,
                    ),
                },
            ),
            spec: V0_1,
        },
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_1,
        schema_subtypes_map: {},
        request_headers: {},
        response_headers: {},
        request_variable_keys: {},
        response_variable_keys: {},
        batch_settings: None,
        error_settings: ConnectorErrorsSettings {
            message: None,
            source_extensions: None,
            connect_extensions: None,
            connect_is_success: None,
        },
        requires: [],
        output_type: Some(
            List(
                Named(
                    "T",
                ),
            ),
        ),
        label: Label(
            "connectors.example http: GET /",
        ),
    },
}
